# UnrealMCPHub

./: .gitignore  README.md  pyproject.toml
docs/: project-analysis.md  project-analysis.zh-CN.md
docs/unreal-ai-playbook/: benchmark-research-report.zh-CN.md  change-buckets-and-branching.zh-CN.md  rules.md  skill-system.md  todo.md  workflow.md
skills/unrealhub-developer/: SKILL.md
skills/use-unrealhub/: SKILL.md
src/unrealhub/: cli.py  config.py  server.py  state.py  watcher.py
src/unrealhub/tools/: discovery_tools.py  install_tools.py  launch_tools.py  monitor_tools.py  proxy_tools.py
src/unrealhub/utils/: ue_paths.py
tests/: test_discovery_tools.py  test_launch_tools.py  test_proxy_tools.py  test_server.py  test_state.py  test_ue_paths.py  test_watcher.py  test_zombie_cleanup.py
tools/: run-unrealhub-source.bat  run_unrealhub_source.py
