[project]
name = "unrealhub"
version = "0.3.0"
description = "UnrealMCPHub - Central management platform for Unreal Engine MCP instances"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "BlackPlume" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Games/Entertainment",
]
keywords = ["unreal-engine", "mcp", "ai-agent", "game-development", "model-context-protocol"]
dependencies = [
    "mcp>=1.25.0",
    "httpx>=0.27",
    "psutil>=6.0",
    "click>=8.1",
    "uvicorn>=0.30",
    "pydantic>=2.0",
]

[project.scripts]
unrealhub = "unrealhub.cli:main"

[project.urls]
Homepage = "https://github.com/blackplume233/UnrealMCPHub"
Repository = "https://github.com/blackplume233/UnrealMCPHub"
Issues = "https://github.com/blackplume233/UnrealMCPHub/issues"
Documentation = "https://github.com/blackplume233/UnrealMCPHub#readme"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unrealhub"]
